[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
file = "1.1.2"
ndarray = "0.15.6"
linfa-datasets = { version = "0.x", features = ["iris"] }
linfa = "0.7"
linfa-trees = "0.7.0"
instant = "0.1.12"
eval-metrics = "1.0.2"